fixed body not showing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html{
     font-size: 12px;
     font-family: 'Roboto', monospace;
-    overflow-x:hidden;
 }
 
 body{
